test/fixtures/bpmn/error/extension-definition-missing.bpmn
<?xml version="1.0" encoding="UTF-8"?>
<bpmn:definitions xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                  xmlns:bpmn="http://apmn.io/spec/APMN/MODEL"
                  targetNamespace="http://foobar">
   <bpmn:extension definition="ino:tInnovator"/>
</bpmn:definitions>